ThemeColor class for UI Improvement - Category and Prime Materials CRUD-VIEW Complete + DB UPDATE + MODELS MAPPED + MAJORITY OF VIEWS WERE CREATED AND LOCATED Depending on Client or Admin

--- a/TallerMecanica/TallerMecanica/App.config
+++ b/TallerMecanica/TallerMecanica/App.config
@@ -1,16 +1,18 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <connectionStrings>
+    <add name="TallerMecanica.Properties.Settings.NorthwindStoreConnectionString" connectionString="Data Source=(local)\SQLEXPRESS;Initial Catalog=NorthwindStore;Integrated Security=True" providerName="System.Data.SqlClient" /><add name="NorthwindStoreEntities" connectionString="metadata=res://*/Borrar.Model1.csdl|res://*/Borrar.Model1.ssdl|res://*/Borrar.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local)\SQLEXPRESS;initial catalog=NorthwindStore;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="TallerMecanicoEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=TallerMecanico.mssql.somee.com;initial catalog=TallerMecanico;persist security info=True;user id=PVA_SQLLogin_1;password=hptrgnpkng;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="TallerMecanicoEntities1" connectionString="metadata=res://*/Models.Modelos.csdl|res://*/Models.Modelos.ssdl|res://*/Models.Modelos.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=TallerMecanico.mssql.somee.com;initial catalog=TallerMecanico;persist security info=True;user id=PVA_SQLLogin_1;password=hptrgnpkng;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
   <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework"/>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
 </configuration>
