--- a/TallerMecanica/TallerMecanica/TallerMecanica.csproj
+++ b/TallerMecanica/TallerMecanica/TallerMecanica.csproj
@@ -56,26 +56,68 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FORMS\Form1.cs">
-      <SubType>Form</SubType>
+    <Compile Include="Repositories\conexion.cs" />
+    <Compile Include="Models\Categoria.cs">
+      <DependentUpon>Modelos.tt</DependentUpon>
     </Compile>
-    <Compile Include="FORMS\Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Models\Cliente.cs">
+      <DependentUpon>Modelos.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\Categoria.cs" />
-    <Compile Include="Models\PetModel.cs" />
+    <Compile Include="Models\MateriaPrima.cs">
+      <DependentUpon>Modelos.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\MateriaPrima_ProductoComprado.cs">
+      <DependentUpon>Modelos.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\MateriaPrima_ProductoPreEnsamblado.cs">
+      <DependentUpon>Modelos.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Modelos.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Modelos.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Modelos.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Modelos.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Modelos.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Modelos.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Models\ProductoComprado.cs">
+      <DependentUpon>Modelos.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\ProductoPreEnsamblado.cs">
+      <DependentUpon>Modelos.tt</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\BaseRepository.cs" />
-    <Compile Include="Repositories\CategoriaRepository.cs" />
+    <Compile Include="Repositories\RCategoria.cs" />
     <Compile Include="Repositories\IRepository.cs" />
-    <Compile Include="Repositories\PetRepository.cs" />
+    <Compile Include="Repositories\RMateriaPrima.cs" />
+    <Compile Include="Singleton.cs" />
     <Compile Include="themeColor.cs" />
+    <Compile Include="Views\ClientMainView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\ClientMainView.Designer.cs">
+      <DependentUpon>ClientMainView.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\AdminMainView.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Views\AdminMainView.Designer.cs">
       <DependentUpon>AdminMainView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\AdminViews\AdminsView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\AdminViews\AdminsView.Designer.cs">
+      <DependentUpon>AdminsView.cs</DependentUpon>
     </Compile>
     <Compile Include="Views\AdminViews\CategoriaView.cs">
       <SubType>Form</SubType>
@@ -83,23 +125,53 @@
     <Compile Include="Views\AdminViews\CategoriaView.Designer.cs">
       <DependentUpon>CategoriaView.cs</DependentUpon>
     </Compile>
-    <Compile Include="Views\ClientMainView.cs">
+    <Compile Include="Views\AdminViews\ClientesView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Views\ClientMainView.Designer.cs">
-      <DependentUpon>ClientMainView.cs</DependentUpon>
+    <Compile Include="Views\AdminViews\ClientesView.Designer.cs">
+      <DependentUpon>ClientesView.cs</DependentUpon>
     </Compile>
-    <Compile Include="FORMS\Formproducto.cs">
+    <Compile Include="Views\AdminViews\HistorialProductosCompradosView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FORMS\Formproducto.Designer.cs">
-      <DependentUpon>Formproducto.cs</DependentUpon>
+    <Compile Include="Views\AdminViews\HistorialProductosCompradosView.Designer.cs">
+      <DependentUpon>HistorialProductosCompradosView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\ClientViews\ClientProfileView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\ClientViews\ClientProfileView.Designer.cs">
+      <DependentUpon>ClientProfileView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\ClientViews\HistorialComprasCliente.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\ClientViews\HistorialComprasCliente.Designer.cs">
+      <DependentUpon>HistorialComprasCliente.cs</DependentUpon>
     </Compile>
     <Compile Include="Views\LoginView.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Views\LoginView.Designer.cs">
       <DependentUpon>LoginView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\AdminViews\MateriasPrimasView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\AdminViews\MateriasPrimasView.Designer.cs">
+      <DependentUpon>MateriasPrimasView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\SharedViews\CarritoComprasView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\SharedViews\CarritoComprasView.Designer.cs">
+      <DependentUpon>CarritoComprasView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\SharedViews\ProductosPreEnsamblados.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\SharedViews\ProductosPreEnsamblados.Designer.cs">
+      <DependentUpon>ProductosPreEnsamblados.cs</DependentUpon>
     </Compile>
     <Compile Include="Views\SignupView.cs">
       <SubType>Form</SubType>
@@ -117,12 +189,52 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Views\AdminViews\AdminsView.resx">
+      <DependentUpon>AdminsView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\AdminViews\ClientesView.resx">
+      <DependentUpon>ClientesView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\AdminViews\HistorialProductosCompradosView.resx">
+      <DependentUpon>HistorialProductosCompradosView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\ClientMainView.resx">
+      <DependentUpon>ClientMainView.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\AdminMainView.resx">
       <DependentUpon>AdminMainView.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FORMS\Formproducto.resx">
-      <DependentUpon>Formproducto.cs</DependentUpon>
+    <EmbeddedResource Include="Views\AdminViews\CategoriaView.resx">
+      <DependentUpon>CategoriaView.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Views\AdminViews\MateriasPrimasView.resx">
+      <DependentUpon>MateriasPrimasView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\ClientViews\ClientProfileView.resx">
+      <DependentUpon>ClientProfileView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\ClientViews\HistorialComprasCliente.resx">
+      <DependentUpon>HistorialComprasCliente.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\LoginView.resx">
+      <DependentUpon>LoginView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\SharedViews\CarritoComprasView.resx">
+      <DependentUpon>CarritoComprasView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\SharedViews\ProductosPreEnsamblados.resx">
+      <DependentUpon>ProductosPreEnsamblados.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\SignupView.resx">
+      <DependentUpon>SignupView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EntityDeploy Include="Models\Modelos.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>Modelos.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="Models\Modelos.edmx.diagram">
+      <DependentUpon>Modelos.edmx</DependentUpon>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -137,11 +249,18 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Views\ClientViews\" />
-    <Folder Include="Views\SharedViews\" />
-  </ItemGroup>
-  <ItemGroup>
+    <Content Include="Models\Modelos.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Modelos.edmx</DependentUpon>
+      <LastGenOutput>Modelos.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Models\Modelos.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Modelos.edmx</DependentUpon>
+      <LastGenOutput>Modelos.cs</LastGenOutput>
+    </Content>
     <Content Include="Recursos\alarm %281%29.png" />
     <Content Include="Recursos\bar-chart.png" />
     <Content Include="Recursos\cross-out %282%29.png" />
@@ -151,6 +270,9 @@
     <Content Include="Recursos\value %281%29.png" />
     <Content Include="Recursos\value.png" />
     <Content Include="SqlScript.sql" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
