--- a/TallerMecanica/TallerMecanica/App.config
+++ b/TallerMecanica/TallerMecanica/App.config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="TallerMecanica.Properties.Settings.NorthwindStoreConnectionString" connectionString="Data Source=(local)\SQLEXPRESS;Initial Catalog=NorthwindStore;Integrated Security=True" providerName="System.Data.SqlClient" /><add name="TallerMecanica.Properties.Settings.TallerMecanicoConnectionString" connectionString="Data Source=TallerMecanico.mssql.somee.com;Initial Catalog=TallerMecanico;Persist Security Info=True;User ID=PVA_SQLLogin_1;Password=hptrgnpkng" providerName="System.Data.SqlClient" />
+	  <add name="TallerMecanicoEntities1" connectionString="metadata=res://*/Models.Modelos.csdl|res://*/Models.Modelos.ssdl|res://*/Models.Modelos.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=TallerMecanico.mssql.somee.com;initial catalog=TallerMecanico;persist security info=True;user id=PVA_SQLLogin_1;password=hptrgnpkng;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
