--- a/TallerMecanica/TallerMecanica/TallerMecanica.csproj
+++ b/TallerMecanica/TallerMecanica/TallerMecanica.csproj
@@ -157,6 +157,12 @@
     <Compile Include="Views\ClientViews\HistorialComprasCliente.Designer.cs">
       <DependentUpon>HistorialComprasCliente.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\LoginView.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -224,6 +230,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Views\ClientViews\HistorialComprasCliente.resx">
       <DependentUpon>HistorialComprasCliente.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\LoginView.resx">
       <DependentUpon>LoginView.cs</DependentUpon>
